Upgrade to angular 20

--- a/src/components/carousel/carousel.component.html
+++ b/src/components/carousel/carousel.component.html
@@ -2,7 +2,8 @@
     [style.transform]="'translateX(-' + currSlide() * 100 + '%)'">
     <ng-content></ng-content>
 </div>
-<div *ngIf="pageSwitcher()" class="absolute w-full h-full top-0 left-0 flex justify-between pointer-events-none">
+@if (pageSwitcher()) {
+<div class="absolute w-full h-full top-0 left-0 flex justify-between pointer-events-none">
     <div class="h-full flex justify-center items-center">
         <fa-icon [icon]="angleLeft()" size="2x" class="pl-5 pointer-events-auto"
             [ngClass]="{'md:cursor-pointer': currSlide() > 0, 'disabled': currSlide() === 0}"
@@ -14,3 +15,4 @@
             (click)="nextSlide()"></fa-icon>
     </div>
 </div>
+}
