--- a/src/components/reference/reference.component.html
+++ b/src/components/reference/reference.component.html
@@ -1,12 +1,13 @@
 <ng-container *ngTemplateOutlet="url() ? anchor : hexagon; context: {customClass: 'anchor'}"></ng-container>
-<div *ngIf="flyoutText()"
-    [class]="'pointer-events-none flyout-container absolute h-full top-0 left-0 invisible ' + flyoutOrientation()"
-    [ngClass]="{'flip': flyoutFlip()}">
-    <ng-container *ngTemplateOutlet="hexagon"></ng-container>
-    <span
-        class="pointer-events-auto relative flex items-center flyout-text bg-primary-accent text-xs xl:text-sm overflow-hidden text-primary">{{flyoutText()}}</span>
-    <ng-container *ngTemplateOutlet="hexagon; context: {customClass: 'flyout-right'}"></ng-container>
-</div>
+@if (flyoutText()) {
+    <div [class]="'pointer-events-none flyout-container absolute h-full top-0 left-0 invisible ' + flyoutOrientation()"
+        [ngClass]="{'flip': flyoutFlip()}">
+        <ng-container *ngTemplateOutlet="hexagon"></ng-container>
+        <span
+            class="pointer-events-auto relative flex items-center flyout-text bg-primary-accent text-xs xl:text-sm overflow-hidden text-primary">{{flyoutText()}}</span>
+        <ng-container *ngTemplateOutlet="hexagon; context: {customClass: 'flyout-right'}"></ng-container>
+    </div>
+}
 <div class="pointer-events-none absolute w-full h-full top-0 left-0 flex justify-center items-center">
     <ng-content select="[referenceIcon]"></ng-content>
 </div>
