--- a/src/components/not-found/not-found.component.html
+++ b/src/components/not-found/not-found.component.html
@@ -6,11 +6,17 @@
     </div>
     <div class="xl:col-start-2 px-6 flex justify-center relative">
         <img [src]="image().url" alt="Content not found" />
-        <div *ngIf="image().attributionText" class="attribution opaque-bg absolute right-0 bottom-0">
-            <a *ngIf="image().attributionUrl; else attribution" [href]="image().attributionUrl">
-                <ng-container *ngTemplateOutlet="attribution"></ng-container>
-            </a>
-        </div>
+        @if (image().attributionText) {
+            <div class="attribution opaque-bg absolute right-0 bottom-0">
+                @if (image().attributionUrl) {
+                    <a [href]="image().attributionUrl">
+                        <ng-container *ngTemplateOutlet="attribution"></ng-container>
+                    </a>
+                } @else {
+                    {{image().attributionText}}
+                }
+            </div>
+        }
     </div>
 </div>
 
