--- a/src/layouts/story/story.layout.html
+++ b/src/layouts/story/story.layout.html
@@ -1,28 +1,30 @@
 <div class="max-w-8xl m-auto pt-6 px-4 md:px-6">
-    <div *ngIf="type() !== StoryType().UNKNOWN">
-        <ul class="breadcrumbs text-lg pb-6">
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a [href]="'/' + baseUrl()">{{categoryLabel()}}</a>
-            </li>
-            <li>{{story().title}}</li>
-        </ul>
-        <h1 class="text-3xl pb-0">{{story().title}}</h1>
-        <div class="pb-2 text-xl">
-            @switch(type()) {
-            @case(StoryType().INSIGHT) {
-            <i>An insight story</i>
-            }
-            @case(StoryType().CASESTUDY) {
-            <i>A case study</i>
-            }
-            }
+    @if (type() !== StoryType().UNKNOWN) {
+        <div>
+            <ul class="breadcrumbs text-lg pb-6">
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a [href]="'/' + baseUrl()">{{categoryLabel()}}</a>
+                </li>
+                <li>{{story().title}}</li>
+            </ul>
+            <h1 class="text-3xl pb-0">{{story().title}}</h1>
+            <div class="pb-2 text-xl">
+                @switch(type()) {
+                    @case(StoryType().INSIGHT) {
+                        <i>An insight story</i>
+                    }
+                    @case(StoryType().CASESTUDY) {
+                        <i>A case study</i>
+                    }
+                }
+            </div>
+            <p>Published at {{story().created.toLocaleString()}}</p>
+            <p class="pb-12">Last updated at {{story().lastModified.toLocaleString()}}</p>
         </div>
-        <p>Published at {{story().created.toLocaleString()}}</p>
-        <p class="pb-12">Last updated at {{story().lastModified.toLocaleString()}}</p>
-    </div>
+    }
     <div class="pb-12 lg:text-lg">
         <router-outlet />
     </div>
