--- a/src/layouts/framed/framed.layout.html
+++ b/src/layouts/framed/framed.layout.html
@@ -1,3 +1,3 @@
-<nav class="navbar md:flex justify-between items-center md:h-16"></nav>
+<nav class="navbar md:flex justify-between items-center md:h-16 md:mr-2"></nav>
 <router-outlet />
 <footer id="footer" class="bg-primary-accent"></footer>
